--- a/index.html
+++ b/index.html
@@ -11,39 +11,57 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="logo">
-      <img src="Icons/background-img.jpg" alt="Esports Tournament 2024 Logo" />
-    </div>
-    <!-- Header Section -->
-    <header class="header">
-      <nav class="nav-menu">
-        <ul>
-          <div class="logo-1">
-            <img class="logo-img" src="Icons/logo.jpg" alt="" />
-          </div>
-
-          <li><a href="#">About</a></li>
-          <li><a href="#">Teams</a></li>
-          <li><a href="#">Schedule</a></li>
-          <li><a href="#">Sponsors</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Tickets</a></li>
-        </ul>
-      </nav>
+    <section class="homepage">
       <div class="header-main">
-        <h2 class="header-subtitle">"Join the Ultimate Battle"</h2>
-        <h1 class="header-title">LEAGUE OF LEGENDS <br>ESPORTS TOURNAMENT<br>2024</h1>
-        <p class="event-details">
-          Witness the best teams from around the globe clash in a high-octane<br />
-          tournament that will define the next champion. Get ready for epic
-          battles!
-        </p>
-        <p class="event-date">
-          December 15th - 17th, 2024<br />
-          @ Virtual Arena and Live Streaming Platforms
-        </p>
+        <h2 class="header-subtitle">"Hello! Gamers and Streamers"</h2>
+        <h1 class="header-title">
+          LEAGUE OF LEGENDS <br />ESPORTS TOURNAMENT<br />2024
+        </h1>
       </div>
-    </header>
+      <div class="logo">
+        <img
+          src="Icons/background-img.jpg"
+          alt="Esports Tournament 2024 Logo"
+        />
+      </div>
+    </section>
+    <!-- Header Section -->
+    <section class="outer-body">
+      <section class="inner-body">
+        <header class="header">
+          <nav class="nav-menu">
+            <ul>
+              <div class="logo-1">
+                <img class="logo-img" src="Icons/logo.jpg" alt="" />
+              </div>
+
+              <li><a href="#">About</a></li>
+              <li><a href="#">Teams</a></li>
+              <li><a href="#">Schedule</a></li>
+              <li><a href="#">Sponsors</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Tickets</a></li>
+            </ul>
+          </nav>
+          <div class="header-main">
+            <h2 class="header-subtitle">"Join the Ultimate Battle"</h2>
+            <h1 class="header-title1">
+              LEAGUE OF LEGENDS <br />ESPORTS TOURNAMENT<br />2024
+            </h1>
+            <p class="event-details">
+              Witness the best teams from around the globe clash in a
+              high-octane<br />
+              tournament that will define the next champion. Get ready for epic
+              battles!
+            </p>
+            <p class="event-date">
+              December 15th - 17th, 2024<br />
+              @ Virtual Arena and Live Streaming Platforms
+            </p>
+          </div>
+        </header>
+      </section>
+    </section>
 
     <!-- Program Section -->
     <section class="program-section">
@@ -67,13 +85,21 @@
           <p>The ultimate showdown to crown the esports tournament champion!</p>
         </div>
         <div class="program-item">
-          <h4>Special Performances</h4>
+          <h4>Performances</h4>
           <p>
             Enjoy exclusive performances from world-class musicians and artists.
           </p>
         </div>
       </div>
       <a href="#" class="program-link">See the Full Schedule</a>
+    </section>
+
+    <!-- Speakers Section -->
+    <section class="speakers-section">
+      <h3>Featured Speakers</h3>
+      <div class="speakers-grid" id="speakers-container">
+        <!-- Speakers will be dynamically added here by JavaScript -->
+      </div>
     </section>
 
     <script src="main.js"></script>
