--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="logo-1">
             <a href='#inner-body1'><img class="logo-img" src="Icons/logo.jpg" alt="" /></a>
           </div>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Teams</a></li>
           <li><a href="#">Schedule</a></li>
           <li><a href="#">Sponsors</a></li>
